status/li/linenoise_ada/1.1.1/macos/darwin-23.5.0/gnat=10.3.2/linenoise_ada-1.1.1.yaml.log
Test ran at 2024-07-30 01:47:29.739523+00:00

SOLUTION:
linenoise_ada=1.1.1: Bindings to the Linenoise line editing library
Origin: source archive v1.1.1.tar.gz at https://git.sr.ht/~nytpu/linenoise-ada/archive/v1.1.1.tar.gz with hashes sha256:09aa2452b34c2714858e06cceeae52f366a79f452fec667d5a78d3252a31b40f, sha512:c098d1281992702d8fd889e73d19feeaa10770f00bdb40ad0cb1627cd6cb48bf8272e8cfe8fc5fb4a0fa64125f9b4d4a04e43012a06ba9dda1ff21695b11cf04
Available when: (case OS is Linux => True, Macos => True, Windows => False, others => False)
Properties:
   Author: nytpu
   Description: Bindings to the Linenoise line editing library
   GPR Scenario: BUILD_MODE := debug | optimize
   GPR Scenario: COMPILE_CHECKS := enabled | disabled
   GPR Scenario: CONTRACTS := enabled | disabled
   GPR Scenario: LIBRARY_TYPE := dynamic | relocatable | static | static-pic
   GPR Scenario: RUNTIME_CHECKS := enabled | disabled
   GPR Scenario: STYLE_CHECKS := enabled | disabled
   License: BSD-2-Clause
   Maintainer: nytpu <alex@nytpu.com>
   Maintainers_Logins: nytpu
   Name: linenoise_ada
   Project_File: linenoise.gpr
   Tag: linenoise
   Tag: readline
   Tag: line-editing
   Version: 1.1.1
   Website: https://git.sr.ht/~nytpu/linenoise-ada


LOG:
Note: Deploying linenoise_ada=1.1.1...
#=#=#                                                                          
##O#-#                                                                         
##O=#  #                                                                       
#=#=-#  #                                                                      
-#O#- #   #                                                                    
Note: Building linenoise_ada/linenoise.gpr...
Setup
   [mkdir]        object directory for project Linenoise
   [mkdir]        library directory for project Linenoise
Compile
   [C]            linenoise-c.c
   [C]            utf8.c
   [C]            helpers.c
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:62,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/src/helpers.c:5:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_types.h:27,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:71,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/src/linenoise/utf8.c:44:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/termios.h:26,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/src/linenoise/linenoise-c.c:106:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of helpers.c failed
   compilation of utf8.c failed
   compilation of linenoise-c.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f7162aad-ea8f-4f10-9a7a-7bec977b82f1/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x1041bd000
Call stack traceback locations:
0x104ac5415 0x104798e83 0x1049abdf9 0x1049ac581 0x10490cac3 0x10490af99 0x104927873 0x104973dc1 0x10497281a 0x1049279b8 0x10490b349 0x10421c9c1 0x10422d578 0x10423201c 0x1042b805c 0x1042c33b8 0x1041be605 0x1041c1914


Warning: linenoise_ada=1.1.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
